[project]
name = "harmonicvtransc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emcee>=3.1.6",
    "harmonic>=1.2.3",
    "octo",
    "pandas>=2.3.1",
    "pyfm2d",
    "pytransc",
]

[tool.uv.sources]
pytransc = { git = "ssh://git@github.com/inlab-geo/pyTransC.git"}
octo = { git = "https://github.com/auggiemarignier/octo.git" }

[tool.uv]
# harmonic requires distrax which requires numpy<2
# but pytransc, pyfm2d require numpy>=2
# distrax hasn't released anything in over a year
# so seems unlikely to update
override-dependencies = ["numpy>=2"]
